Revert "fix big images not fitting the carousel"
This reverts commit 8aaf6c04a877af1d74969aca87ed3ae030bcc174.

--- a/css/main.css
+++ b/css/main.css
@@ -83,13 +83,6 @@ td:nth-child(even) {
   padding: 1%;
 }
 
-.carousel-item img {
-  max-height: 100%;
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
-}
-
 #pokemon-carousel{
   height: 500px;
   display: flex;
